# modern-cpp

./: .gitignore  LICENSE
build_systems/: CMakeLists.txt  README.md  main.cpp
homework_1/task_1/: commands.sh
homework_1/task_2/: CMakeLists.txt  build.sh  install.sh
homework_1/task_2/src/: CMakeLists.txt
homework_2/: CMakeLists.txt
homework_2/src/: CMakeLists.txt
homework_2/src/task_1/: main.cpp
homework_2/src/task_2/: main.cpp
homework_3/: CMakeLists.txt  README.md
homework_3/api/: .html_writer.hpp.swp
homework_3/src/: .image_browser.cpp.swp  CMakeLists.txt  html_writer.cpp  image_browser.cpp  main.cpp
homework_4/: CMakeLists.txt  build.sh
homework_4/src/: CMakeLists.txt  main.cpp
homework_4/tests/: CMakeLists.txt  test_ipb_algorithm.cpp  test_main.cpp  test_named_vector.cpp
homework_5/: CMakeLists.txt  build.sh
homework_5/src/: CMakeLists.txt  main.cpp  serialize.cpp
homework_5/tests/: CMakeLists.txt  sifts_internal.cpp  test_convert_dataset.cpp  test_serialize.cpp
homework_6/: CMakeLists.txt  build.sh  test.sh
homework_6/io_tools/: io_tools.cpp
homework_6/src/: CMakeLists.txt  image.cpp  main.cpp
homework_7/: CMakeLists.txt  build.sh
homework_7/serialize/: convert_dataset.cpp  serialize.cpp  serialize.hpp
homework_7/src/: CMakeLists.txt  bow_dictionary.cpp  kmeans.cpp  main.cpp
homework_7/tests/: CMakeLists.txt
input_output/: main.cpp
link_libraries/: README.md  tools.cpp  tools.hpp
